@@ -1,41 +1,42 @@
 import re
 import datetime
 import os
+import urllib2
 
 import xbmc
 import xbmcgui
+import xbmcaddon
 import xbmcplugin
 
-import danishaddons
-import danishaddons.web
-import danishaddons.info
-
 class DRnuUI(object):
-    def __init__(self, api):
+    ADDON = xbmcaddon.Addon(id = 'plugin.video.drnu')
+    def __init__(self, api, addonHandle, addonPath):
         self.api = api
+        self.addonHandle = addonHandle
+        self.addonPath = addonPath
 
     def getMainMenu(self):
-        iconImage = os.path.join(danishaddons.ADDON.getAddonInfo('path'), 'icon.png')
+        iconImage = os.path.join(self.ADDON.getAddonInfo('path'), 'icon.png')
         # All Program Series
-        item = xbmcgui.ListItem(danishaddons.msg(30000), iconImage=iconImage)
-        xbmcplugin.addDirectoryItem(danishaddons.ADDON_HANDLE, danishaddons.ADDON_PATH + '?all', item, isFolder=True)
+        item = xbmcgui.ListItem(self.ADDON.getLocalizedString(30000), iconImage=iconImage)
+        xbmcplugin.addDirectoryItem(self.addonHandle, self.addonPath + '?all', item, isFolder=True)
         # Latest
-        item = xbmcgui.ListItem(danishaddons.msg(30001), iconImage=iconImage)
-        xbmcplugin.addDirectoryItem(danishaddons.ADDON_HANDLE, danishaddons.ADDON_PATH + '?newest', item, isFolder=True)
+        item = xbmcgui.ListItem(self.ADDON.getLocalizedString(30001), iconImage=iconImage)
+        xbmcplugin.addDirectoryItem(self.addonHandle, self.addonPath + '?newest', item, isFolder=True)
         # Spotlight
-        item = xbmcgui.ListItem(danishaddons.msg(30002), iconImage=iconImage)
-        xbmcplugin.addDirectoryItem(danishaddons.ADDON_HANDLE, danishaddons.ADDON_PATH + '?spot', item, isFolder=True)
+        item = xbmcgui.ListItem(self.ADDON.getLocalizedString(30002), iconImage=iconImage)
+        xbmcplugin.addDirectoryItem(self.addonHandle, self.addonPath + '?spot', item, isFolder=True)
         # Search
-        item = xbmcgui.ListItem(danishaddons.msg(30003), iconImage=iconImage)
-        xbmcplugin.addDirectoryItem(danishaddons.ADDON_HANDLE, danishaddons.ADDON_PATH + '?search', item, isFolder=True)
+        item = xbmcgui.ListItem(self.ADDON.getLocalizedString(30003), iconImage=iconImage)
+        xbmcplugin.addDirectoryItem(self.addonHandle, self.addonPath + '?search', item, isFolder=True)
         # Recently watched Program Series
-        item = xbmcgui.ListItem(danishaddons.msg(30007), iconImage=iconImage)
-        xbmcplugin.addDirectoryItem(danishaddons.ADDON_HANDLE, danishaddons.ADDON_PATH + '?recentlywatched', item, isFolder=True)
+        item = xbmcgui.ListItem(self.ADDON.getLocalizedString(30007), iconImage=iconImage)
+        xbmcplugin.addDirectoryItem(self.addonHandle, self.addonPath + '?recentlywatched', item, isFolder=True)
         # Favorite Program Series
-        item = xbmcgui.ListItem(danishaddons.msg(30008), iconImage=iconImage)
-        xbmcplugin.addDirectoryItem(danishaddons.ADDON_HANDLE, danishaddons.ADDON_PATH + '?favorites', item, isFolder=True)
+        item = xbmcgui.ListItem(self.ADDON.getLocalizedString(30008), iconImage=iconImage)
+        xbmcplugin.addDirectoryItem(self.addonHandle, self.addonPath + '?favorites', item, isFolder=True)
 
-        xbmcplugin.endOfDirectory(danishaddons.ADDON_HANDLE)
+        xbmcplugin.endOfDirectory(self.addonHandle)
 
     def getProgramSeries(self, limitToSlugs = None, addToFavorites = True):
         programSeries = self.api.getProgramSeries()
@@ -55,7 +56,7 @@ class DRnuUI(object):
 
             if program['newestVideoPublishTime'] is not None:
                 publishTime = self.parseDate(program['newestVideoPublishTime'])
-                infoLabels['plotoutline'] = danishaddons.msg(30004) % publishTime.strftime('%d. %b %Y kl. %H:%M')
+                infoLabels['plotoutline'] = self.ADDON.getLocalizedString(30004) % publishTime.strftime('%d. %b %Y kl. %H:%M')
                 infoLabels['date'] = publishTime.strftime('%d.%m.%Y')
                 infoLabels['year'] = int(publishTime.strftime('%Y'))
 
@@ -73,18 +74,18 @@ class DRnuUI(object):
 
             if addToFavorites:
                 runScript = "XBMC.RunPlugin(plugin://plugin.video.drnu/?addfavorite=%s)" % program['slug']
-                item.addContextMenuItems([(danishaddons.msg(30200), runScript)], True)
+                item.addContextMenuItems([(self.ADDON.getLocalizedString(30200), runScript)], True)
             else:
                 runScript = "XBMC.RunPlugin(plugin://plugin.video.drnu/?delfavorite=%s)" % program['slug']
-                item.addContextMenuItems([(danishaddons.msg(30201), runScript)], True)
+                item.addContextMenuItems([(self.ADDON.getLocalizedString(30201), runScript)], True)
 
-            url = danishaddons.ADDON_PATH + '?slug=' + program['slug']
-            xbmcplugin.addDirectoryItem(danishaddons.ADDON_HANDLE, url, item, isFolder=True)
+            url = self.addonPath + '?slug=' + program['slug']
+            xbmcplugin.addDirectoryItem(self.addonHandle, url, item, isFolder=True)
 
-        xbmcplugin.endOfDirectory(danishaddons.ADDON_HANDLE)
+        xbmcplugin.endOfDirectory(self.addonHandle)
 
     def searchVideos(self):
-        keyboard = xbmc.Keyboard('', danishaddons.msg(30003))
+        keyboard = xbmc.Keyboard('', self.ADDON.getLocalizedString(30003))
         keyboard.doModal()
         if keyboard.isConfirmed():
             keyword = keyboard.getText()
@@ -97,7 +98,7 @@ class DRnuUI(object):
                     del videos[idx]
 
             if not len(videos):
-                xbmcgui.Dialog().ok(danishaddons.msg(30003), danishaddons.msg(30005))
+                xbmcgui.Dialog().ok(self.ADDON.getLocalizedString(30003), self.ADDON.getLocalizedString(30005))
             else:
                 self.listVideos(videos, False)
 
@@ -109,17 +110,17 @@ class DRnuUI(object):
             if video['title'] is not None:
                 infoLabels['title'] = video['title']
             else:
-                infoLabels['title'] = danishaddons.msg(30006)
+                infoLabels['title'] = self.ADDON.getLocalizedString(30006)
 
             if isSpot:
                 infoLabels['plot'] = video['spotSubTitle']
             else:
                 infoLabels['plot'] = video['description']
-                if video.has_key('duration'):
+                if video.has_key('duration') and video['duration'] is not None:
                     infoLabels['duration'] = video['duration']
-                if video.has_key('broadcastChannel'):
+                if video.has_key('broadcastChannel') and video['broadcastChannel'] is not None:
                     infoLabels['studio'] = video['broadcastChannel']
-                if video['broadcastTime'] is not None:
+                if video.has_key('broadcastTime') and video['broadcastTime'] is not None:
                     broadcastTime = self.parseDate(video['broadcastTime'])
                     infoLabels['plotoutline'] = 'Sendt: %s' % broadcastTime.strftime('%d. %b %Y kl. %H:%M')
                     infoLabels['date'] = broadcastTime.strftime('%d.%m.%Y')
@@ -134,24 +135,27 @@ class DRnuUI(object):
             item.setInfo('video', infoLabels)
             item.setProperty('IsPlayable', 'true')
             item.setProperty('Fanart_Image', fanartImage)
-            url = danishaddons.ADDON_PATH + '?id=' + str(video['id'])
-            xbmcplugin.addDirectoryItem(danishaddons.ADDON_HANDLE, url, item)
+            url = self.addonPath + '?id=' + str(video['id'])
+            xbmcplugin.addDirectoryItem(self.addonHandle, url, item)
 
-        xbmcplugin.addSortMethod(danishaddons.ADDON_HANDLE, xbmcplugin.SORT_METHOD_DATE)
-        xbmcplugin.endOfDirectory(danishaddons.ADDON_HANDLE)
+        xbmcplugin.addSortMethod(self.addonHandle, xbmcplugin.SORT_METHOD_DATE)
+        xbmcplugin.endOfDirectory(self.addonHandle)
 
 
     def playVideo(self, videoId):
         video = self.api.getVideoById(videoId)
 
-        rtmpUrl = danishaddons.web.downloadUrl(video['videoManifestUrl'])
+        u = urllib2.urlopen(video['videoManifestUrl'])
+        rtmpUrl = u.read()
+        u.close()
+        
         if rtmpUrl[0:7] == '<script':
             d = xbmcgui.Dialog()
-            d.ok(danishaddons.msg(30100), danishaddons.msg(30101), danishaddons.msg(30102))
+            d.ok(self.ADDON.getLocalizedString(30100), self.ADDON.getLocalizedString(30101), self.ADDON.getLocalizedString(30102))
         else:
             rtmpUrl = rtmpUrl.replace('rtmp://vod.dr.dk/', 'rtmp://vod.dr.dk/cms/')
             item = xbmcgui.ListItem(path = rtmpUrl)
-            xbmcplugin.setResolvedUrl(danishaddons.ADDON_HANDLE, True, item)
+            xbmcplugin.setResolvedUrl(self.addonHandle, True, item)
 
     def parseDate(self, dateString):
         m = re.search('/Date\(([0-9]+).*?\)/', dateString)
