@@ -1,3 +1,7 @@
+[B]Version 1.3.0[/B] - 2011-05-16
+- Removed dependency on script.module.danishaddons
+- Fixed errors while display some program series
+
 [B]Version 1.2.1[/B] - 2011-02-01
 - Fixed problem with favorites and recently watched when lists were empty
 - Fixed problem with remove favorite
